--- a/src/app/pages/contato/contato.component.html
+++ b/src/app/pages/contato/contato.component.html
@@ -3,17 +3,22 @@
   <div class="list_social">
     <div class="social">
       <a target="_blank" href="https://github.com/carolinadiniz">
-        <img src="../../../assets/image/social/github.png" alt="">
+        <img src="../../../assets/image/social/github.svg" alt="">
       </a>
     </div>
     <div class="social">
       <a target="_blank" href="https://www.linkedin.com/in/carolina-da-silva-diniz-a242b5211/">
-        <img src="../../../assets/image/social/linkedin.webp" alt="">
+        <img src="../../../assets/image/social/linkedin.svg" alt="">
+      </a>
+    </div>
+    <div class="social">
+      <a target="_blank" href="mailto:caroldinizc21@gmail.com">
+        <img id="whatsapp" src="../../../assets/image/social/gmail.svg" alt="">
       </a>
     </div>
     <div class="social">
       <a target="_blank" href="https://wa.me/5521970698804">
-        <img src="../../../assets/image/social/whatsapp.png" alt="">
+        <img id="whatsapp" src="../../../assets/image/social/whatsapp.svg" alt="">
       </a>
     </div>
   </div>
