--- a/src/styles.css
+++ b/src/styles.css
@@ -48,7 +48,7 @@ table {
 
 :root {
   --color1: #FEE8C1;
-  --color2: #fff;
+  --color2: #ffffff;
   --color3: #302F43;
   --color4: #3e3a54;
   --color5: #ffdb9d;
