--- a/src/app/core/components/header/header.component.html
+++ b/src/app/core/components/header/header.component.html
@@ -1,8 +1,11 @@
 <header>
   <div class="header_container">
     <div class="logo">
+      <a routerLink="portifolio">
+
       <span>{{ name.toUpperCase() }}</span>
       <span class="logo_r">DINIZ</span>
+      </a>
     </div>
     <nav>
       <ul>
