--- a/src/app/core/components/card-portifolio/card-portifolio.component.css
+++ b/src/app/core/components/card-portifolio/card-portifolio.component.css
@@ -6,6 +6,11 @@
   cursor: pointer;
 }
 
+.container:hover {
+  width: 265px;
+  padding: 24px;
+}
+
 h2 {
   text-align: center;
   font-size: 24px;
