--- a/src/app/core/components/cursos/cursos.component.html
+++ b/src/app/core/components/cursos/cursos.component.html
@@ -1,10 +1,7 @@
 <div class="curso">
-  <h2>Nome do curso</h2>
-  <span>Data de conclusão. Mês/Ano</span>
-  <p>
-    Lorem Ipsum is simply dummy text of the printing and typesetting
-    industry. Lorem Ipsum has been the industry's standard dummy text ever
-    since the 1500s, when an unknown printer took a galley of type and
-    scrambled it to make a type specimen book.
-  </p>
+  <a target="_blank" href="{{ src }}">
+    <h2>{{ titulo }}</h2>
+  </a>
+  <span>{{ conclusao }}</span>
+  <p>{{ descricao }}</p>
 </div>
