--- a/src/app/pages/habilidades/habilidades.component.html
+++ b/src/app/pages/habilidades/habilidades.component.html
@@ -3,7 +3,7 @@
   <h2>{{ title }}</h2>
   <div class="skills">
     <div class="skill" *ngFor="let skill of skills">
-      <a>
+      <a (click)="selectSkill(skill.title, skill.description)">
         <img src="{{ skill.src }}" alt="" />
       </a>
     </div>
