--- a/src/app/pages/habilidades/habilidades.component.css
+++ b/src/app/pages/habilidades/habilidades.component.css
@@ -8,8 +8,9 @@
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
-  max-width: 450px;
+  max-width: 60%;
   margin: 0 auto;
+  margin-bottom: 40px;
 }
 
 .skill img {
@@ -17,8 +18,7 @@
   height: 50px;
   cursor: pointer;
   margin-top: 20px;
-  margin-bottom: 40px;
-  transition: all 300ms;
+  transition: all ease-in-out 230ms;
 }
 
 .skill img:hover {
