--- a/src/app/pages/habilidades/habilidades.component.css
+++ b/src/app/pages/habilidades/habilidades.component.css
@@ -18,7 +18,7 @@
   height: 50px;
   cursor: pointer;
   margin-top: 20px;
-  transition: all ease-in-out 230ms;
+  transition: all 200ms;
 }
 
 .skill img:hover {
