--- a/src/app/pages/contato/contato.component.html
+++ b/src/app/pages/contato/contato.component.html
@@ -7,7 +7,7 @@
       </a>
     </div>
     <div class="social">
-      <a target="_blank" href="https://www.linkedin.com/in/carolina-da-silva-diniz-a242b5211/">
+      <a target="_blank" href="https://www.linkedin.com/in/carol-diniz/">
         <img src="../../../assets/image/social/linkedin.svg" alt="">
       </a>
     </div>
