add mobile stylesheets

--- a/src/styles.css
+++ b/src/styles.css
@@ -53,8 +53,17 @@ table {
   --color4: #3e3a54;
   --color5: #ffdb9d;
   --color6: rgba(255, 219, 157, 0.226);
+
   --letter-spacing-container: 3px;
   --line-height-container: 23px;
+
+  --header-height: 73px;
+  --header-height-mobile: 200px;
+  --header-font-size-mobile: 25px;
+
+  --portifolio-container-min-width-mobile: 300px;
+  --portifolio-container-max-width-mobile: 700px;
+
 }
 
 html {
