--- a/src/app/pages/portifolio/portifolio.component.css
+++ b/src/app/pages/portifolio/portifolio.component.css
@@ -1,11 +1,24 @@
-.container {
-  background-color: var(--color3);
-  max-width: 1100px;
+@media screen {
+  .container {
+    background-color: var(--color3);
+    max-width: 1100px;
+  }
+
+  .cards {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+  }
 }
 
+@media screen and (max-width: 768px) {
+  .container {
+    min-width: var(--portifolio-container-min-width-mobile);
+    max-width: var(--portifolio-container-max-width-mobile);
+  }
 
-.cards {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-evenly;
+  .cards {
+    display: flex;
+    flex-direction: column;
+  }
 }
