--- a/src/app/pages/contato/contato.component.css
+++ b/src/app/pages/contato/contato.component.css
@@ -1,36 +1,72 @@
-.container {
-  max-width: 874px;
+@media screen {
+  .container {
+    max-width: 874px;
+  }
+
+  .list_social {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    max-width: 500px;
+    margin: 0 auto;
+  }
+
+  .social img {
+    width: 80px;
+    height: 80px;
+    cursor: pointer;
+  }
+
+  button {
+    display: block;
+    width: 206px;
+    height: 47px;
+    margin: 0 auto;
+    font-size: 20px;
+    cursor: pointer;
+    margin-top: 64px;
+    color: var(--color3);
+    background-color: var(--color5);
+    border: none;
+    border-radius: 10px;
+  }
+
+  button:hover {
+    color: black;
+    background-color: var(--color2);
+  }
 }
 
-.list_social {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  max-width: 500px;
-  margin: 0 auto;
-}
+@media screen and (max-width: 768px) {
+  .container {
+    max-width: 874px;
+    margin-left: 10px;
+    margin-right: 10px;
+    padding-top: 64px;
+    padding-bottom: 64px;
+  }
 
-.social img {
-  width: 80px;
-  height: 80px;
-  cursor: pointer;
-}
+  .container h1 {
+    margin: 0;
+    margin-bottom: var(--h1-margin-bottom-mobile);
+    text-align: var(--h1-text-align-mobile);
+  }
 
-button {
-  display: block;
-  width: 206px;
-  height: 47px;
-  margin: 0 auto;
-  font-size: 20px;
-  cursor: pointer;
-  margin-top: 64px;
-  color: var(--color3);
-  background-color: var(--color5);
-  border: none;
-  border-radius: 10px;
-}
+  .list_social {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+    max-width: 500px;
+    width: 300px;
+    text-align: center;
+  }
 
-button:hover {
-  color: black;
-  background-color: var(--color2);
+  .social img {
+    width: 80px;
+    height: 80px;
+    cursor: pointer;
+    margin: 20px;
+  }
+
+
 }
