--- a/src/app/pages/contato/contato.component.html
+++ b/src/app/pages/contato/contato.component.html
@@ -1,22 +1,22 @@
 <div class="container">
   <h1>Contato</h1>
   <div class="list_social">
-    <div class="social">
+    <div class="social item1">
       <a target="_blank" href="https://github.com/carolinadiniz">
         <img src="../../../assets/image/social/github.svg" alt="">
       </a>
     </div>
-    <div class="social">
+    <div class="social item2">
       <a target="_blank" href="https://www.linkedin.com/in/carol-diniz/">
         <img src="../../../assets/image/social/linkedin.svg" alt="">
       </a>
     </div>
-    <div class="social">
+    <div class="social item3">
       <a target="_blank" href="mailto:caroldinizc21@gmail.com">
         <img id="whatsapp" src="../../../assets/image/social/gmail.svg" alt="">
       </a>
     </div>
-    <div class="social">
+    <div class="social item4">
       <a target="_blank" href="https://wa.me/5521970698804">
         <img id="whatsapp" src="../../../assets/image/social/whatsapp.svg" alt="">
       </a>
