--- a/src/app/pages/portifolio/portifolio.component.css
+++ b/src/app/pages/portifolio/portifolio.component.css
@@ -15,7 +15,18 @@
   .container {
     min-width: var(--portifolio-container-min-width-mobile);
     max-width: var(--portifolio-container-max-width-mobile);
+    margin-left: 10px;
+    margin-right: 10px;
+    padding-top: 64px;
+    padding-bottom: 32px;
   }
+
+  .container h1 {
+    margin: 0;
+    margin-bottom: 15px;
+    text-align: var(--h1-text-align-mobile);
+  }
+
 
   .cards {
     display: flex;
