--- a/src/app/core/components/header/header.component.css
+++ b/src/app/core/components/header/header.component.css
@@ -82,7 +82,7 @@
   header {
     position: fixed;
     margin: 0 auto;
-    height: var(--header-height-mobile);
+    height: auto;
     width: 100%;
     max-width: 1440px;
     left: 50%;
@@ -93,20 +93,27 @@
 
   .header_container {
     align-items: center;
-    height: var(--header-height-mobile);
-    margin: 0 66px;
+    height: auto;
+    margin: 0 20px;
   }
 
   ul {
     display: flex;
     flex-direction: column;
+    padding: 10px 0px;
+    text-align: left;
+  }
+
+  li {
+    padding: 10px 0px;
   }
 
   li a {
     border-radius: 10px;
-    padding: 10px 10px;
     transition: background-color 300ms;
     font-size: var(--header-font-size-mobile);
+    padding: 5px 10px;
+    transition: all ease-in-out 300ms;
   }
 
   li a:hover {
