change mocap text to fixed text

--- a/src/app/core/components/cursos/cursos.component.html
+++ b/src/app/core/components/cursos/cursos.component.html
@@ -2,6 +2,6 @@
   <a target="_blank" href="{{ src }}">
     <h2>{{ titulo }}</h2>
   </a>
-  <span>{{ conclusao }}</span>
-  <p>{{ descricao }}</p>
+  <p>Instituição: {{ instituicao }}</p>
+  <span>Conclusão: {{ conclusao }} - {{horas}} horas</span>
 </div>
