--- a/src/app/pages/sobre-mim/sobre-mim.component.html
+++ b/src/app/pages/sobre-mim/sobre-mim.component.html
@@ -2,24 +2,30 @@
   <h1>Sobre mim</h1>
   <p>
     ✨👋🏽 Olá me chamo {{ name }} e tenho 25 anos, estudante de Ciência da
-    Computação em busca de estágio em tecnologia. Busco uma oportunidade para
-    ingressar na área de tecnologia e aprimorar meus conhecimentos a cada dia.
+    Computação, mulher transgenero e atualmente estou em busca de uma
+    oportunidade para ingressar na área de tecnologia e aprimorar meus
+    conhecimentos a cada dia.
   </p>
   <p>
     👩🏽‍💻No meu dia como estudante de ciência da computação utilizo tecnologias
-    como: Angular, TypeScript, Java, HTML, CSS, Figma, Photoshop, GitHub entre
-    outras. 🐶Atualmente estou engajada em um projeto pessoal chamado
+    como: <strong>Angular</strong>, <strong>TypeScript</strong>,
+    <strong>Java</strong>, <strong>HTML</strong>, <strong>CSS</strong>,
+    <strong>Figma</strong>, <strong>Photoshop</strong>, <strong>GitHub</strong> entre outras.
   </p>
   <p>
-    GuardiãoPet, que tem como objetivo fazer a conexão entre pessoas com desejo
-    de adotar um pet e pessoas que precisam doar por qualquer motivo. O
-    aplicativo ainda está bem no início, e estou utilizando o framework Angular
-    para criar as interfaces.
+    🐶Atualmente estou engajada em um projeto pessoal chamado GuardiãoPet, que
+    tem como objetivo fazer a conexão entre pessoas com desejo de adotar um pet
+    e pessoas que precisam doar por qualquer motivo. O aplicativo ainda está bem
+    no início, e estou utilizando o framework Angular para criar as interfaces.
   </p>
   <p>
-    Link para o projeto: <a target="_blank" href="https://guardiaopet.vercel.app/">GuardiãoPet</a>
+    Link para o projeto:
+    <a target="_blank" href="https://guardiaopet.vercel.app/">GuardiãoPet</a>
     <br />
-    GitHub do projeto: <a target="_blank" href="https://github.com/carolinadiniz/guardiaopet">GuardiãoPet GitHub</a>
+    GitHub do projeto:
+    <a target="_blank" href="https://github.com/carolinadiniz/guardiaopet"
+      >GuardiãoPet GitHub</a
+    >
   </p>
   <p>
     💻Trabalhei por quase 2 anos em uma ONG que oferecia atividades para jovens
@@ -29,8 +35,14 @@
     proporcionar o melhor atendimento para os jovens participantes.
   </p>
   <p>
-    GitHub: <a target="_blank" href="https://github.com/carolinadiniz"><span>&#64;</span>carolinadiniz</a>
+    GitHub:
+    <a target="_blank" href="https://github.com/carolinadiniz"
+      ><span>&#64;</span>carolinadiniz</a
+    >
     <br />
-    Email: <a target="_blank" href="mailto:caroldinizc21@gmail.com">caroldinizc21<span>&#64;</span>gmail.com</a>
+    Email:
+    <a target="_blank" href="mailto:caroldinizc21@gmail.com"
+      >caroldinizc21<span>&#64;</span>gmail.com</a
+    >
   </p>
 </div>
