--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,11 @@
+<div class="stars-container">
+  <img class="star" src="../assets/image/stars/estrelaLine.png">
+  <img class="star" style="right:20px;animation-delay:4s;"  src="../assets/image/stars/estrelaLine.png">
+  <div *ngFor="let estrela of estrelas">
+    <img class="star" src="../assets/image/stars/estrelaLine9.png" [style.left]="estrela.left" [style.animation-delay]="estrela.delay">
+  </div>
+</div>
 <app-header></app-header>
+
+<!--
+-->
