--- a/src/app/core/components/header/header.component.html
+++ b/src/app/core/components/header/header.component.html
@@ -1,10 +1,14 @@
 <header>
   <div class="header_container">
-    <div class="logo">
-      <a routerLink="portifolio">
 
-      <span>{{ name.toUpperCase() }}</span>
-      <span class="logo_r">DINIZ</span>
+    <div class="logo">
+      <div class="moon-container">
+        <div class="moon">
+        </div>
+      </div>
+      <a routerLink="portifolio">
+        <span>{{ name.toUpperCase() }}</span>
+        <span class="logo_r">DINIZ</span>
       </a>
     </div>
     <nav>
