--- a/src/app/core/components/header/header.component.html
+++ b/src/app/core/components/header/header.component.html
@@ -14,7 +14,7 @@
     <nav>
       <ul>
         <li>
-          <a [routerLink]="['portifolio']"> Portifólio </a>
+          <a [routerLink]="['portifolio']"> Portfolio </a>
         </li>
         <li>
           <a [routerLink]="['sobre-mim']"> Sobre mim </a>
