--- a/src/app/pages/contato/contato.component.html
+++ b/src/app/pages/contato/contato.component.html
@@ -2,12 +2,12 @@
   <h1>Contato</h1>
   <div class="list_social">
     <div class="social item1">
-      <a target="_blank" href="https://github.com/carolinadiniz">
+      <a target="_blank" href="https://github.com/is-kaworii">
         <img src="../../../assets/image/social/github.svg" alt="">
       </a>
     </div>
     <div class="social item2">
-      <a target="_blank" href="https://www.linkedin.com/in/carol-diniz/">
+      <a target="_blank" href="https://www.linkedin.com/in/is-kaworii/">
         <img src="../../../assets/image/social/linkedin.svg" alt="">
       </a>
     </div>
