--- a/src/app/pages/portifolio/portifolio.component.html
+++ b/src/app/pages/portifolio/portifolio.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <h1>Portifólio</h1>
+  <h1>Portfólio</h1>
   <div class="cards">
     <div *ngFor="let data of portifolioData">
       <app-card-portifolio
