--- a/src/app/pages/sobre-mim/sobre-mim.component.html
+++ b/src/app/pages/sobre-mim/sobre-mim.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <h1>Sobre mim</h1>
   <p>
-    ✨👋🏽 Olá me chamo {{ name }} e tenho 25 anos, estudante de Ciência da
+    ✨👋🏽 Olá me chamo Carolina e tenho 26 anos, estudante de Ciência da
     Computação, mulher transgenero e atualmente estou em busca de uma
     oportunidade para ingressar na área de tecnologia e aprimorar meus
     conhecimentos a cada dia.
@@ -23,7 +23,7 @@
     <a target="_blank" href="https://guardiaopet.vercel.app/">GuardiãoPet</a>
     <br />
     GitHub do projeto:
-    <a target="_blank" href="https://github.com/carolinadiniz/guardiaopet"
+    <a target="_blank" href="https://github.com/is-kaworii/guardiaopet"
       >GuardiãoPet GitHub</a
     >
   </p>
@@ -36,8 +36,8 @@
   </p>
   <p>
     GitHub:
-    <a target="_blank" href="https://github.com/carolinadiniz"
-      ><span>&#64;</span>carolinadiniz</a
+    <a target="_blank" href="https://github.com/is-kaworii"
+      ><span>&#64;</span>is-kaworii</a
     >
     <br />
     Email:
